# stackcli

./: .gitignore  Dockerfile  README.md  api_cli.py  api_core.py  api_web.py  debug.py  new_reqs.text  pyproject.toml  requirements.txt  stack.py  stackapi.py
src/comm/: comm.py  docker_ver.py
src/core/: core.py  init.py
src/dataset/named_entity_recognition/: ner_spacy.py  spacy.py
src/dataset/object_detection/: labelbox.py  yolo.py
src/dataset/question_answering/: squad.py  squad2.py
src/dataset/schemas/: labelbox.py  yolo.py
src/dataset/seq_to_seq/: multi_seq2seq_csv.py
src/mongo_compatible/: squad2.py
src/storage/classes/: gcs.py  local.py  s3.py  supabase_bucket.py
src/tests/: localhost.html
src/training/: projects.py
src/user/: user.py
src/user/database/: database.py  supabase_db.py
src/user/license/: license.py
stack_api/: api_cli.py  api_core.py  api_vercel.py  api_web.py  example_filter.json
tests/: test_stack_cli.py
